objects/SFGA__Text_Ad__c.object
<CustomObject>
    <description>Text Ads are the advertising copy that displays on the search results page</description>
    <fields>
        <fullName>SFGA__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>R00N40000001Hgh4EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFGA__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N40000001Hgh5EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFGA__Text_Ad_Description_1__c</fullName>
        <label>Text Ad Description 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Text_Ad_Description_2__c</fullName>
        <label>Text Ad Description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Text_Ad_Destination_URL__c</fullName>
        <label>Text Ad Destination URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Text_Ad_Display_URL__c</fullName>
        <label>Text Ad Display URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Text_Ad_ID__c</fullName>
        <description>Unique Identifier of the Text Ad</description>
        <label>Text Ad ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Text Ad</label>
    <listViews>
        <fullName>Nolan_Daigle_Text_Ad</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Text Ad Headline</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Text Ads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>